travail sur les docs

--- a/app/views/d_documents/_pv.html.erb
+++ b/app/views/d_documents/_pv.html.erb
@@ -1,7 +1,8 @@
 
 <div class="pv_header" style="text-align: center">
+  <br>
 
-  <h1><mark><%= @operation.company.name %></mark></h1>
+  <h1><strong><mark><%= @operation.company.name %></mark></strong></h1>
 
   <h3><mark> <%= @operation.company.legal_form %></mark> au capital de<mark><%= @operation.company.number_of_shares * @operation.company.share_nominal_value_cents / 100 %></mark> euros  </h3>
   <h3>Siège social : <mark><%= @operation.company.address %></mark></h3>
@@ -41,14 +42,11 @@ Le Président rappelle à l'Assemblée Générale qu'elle est réunie pour déli
 <br>
 <br>
 Personne ne demandant la parole, le Président met successivement aux voix les résolutions inscrites à l’ordre du jour.
-<br>
-<br>
 </p>
-<br>
 <br>
 
 <div style="text-align: center">
-  <h4>Première résolution</h4>
+  <h4><strong>Première résolution</strong></h4>
   <h5>Augmentation de capital par émission d’actions</h5>
 </div>
 
@@ -65,24 +63,21 @@ Cette résolution est adoptée à l’unanimité.
 <br>
 </p>
 <br>
-<br>
 
 <div style="text-align: center">
-  <h4>Deuxième résolution</h4>
+  <h4><strong>Deuxième résolution</strong></h4>
   <h5>Renonciation des Associés à l’exercice de leur droit préférentiel de souscription</h5>
 </div>
 <p>
 
-<br>
 <br>
 L’Assemblée Générale constate la renonciation des Associés à l’exercice de leur droit préférentiel de souscription au profit des souscripteurs listés en Annexe A et décide en conséquence de l’attribution des <mark><%= @total_of_shares %></mark> Actions au profit de ces mêmes souscripteurs, selon les proportions établies dans ladite annexe.
 <br>
 <br>
 </p>
 <br>
-<br>
 <div style="text-align: center">
-  <h4>Troisième résolution</h4>
+  <h4><strong>Troisième résolution</strong></h4>
   <h5>Pouvoirs pour les formalités</h5>
 </div>
 
@@ -112,9 +107,8 @@ ____________________________
 
 <div style="text-align: center; page-break-before: always;">
 <br>
-<br>
 
-  <h4 >ANNEXE A</h4>
+  <h2 >ANNEXE A</h2>
 
   <h4>Liste des bénéficiaires de la renonciation des Associés à l’exercice de leur droit préférentiel de souscription</h4>
   <br>
@@ -140,15 +134,15 @@ ____________________________
 
 <div style="text-align: center; page-break-before: always;">
   <br>
-  <br>
 
-  <h1><mark><%= @operation.company.name %></mark></h1>
+  <h1><strong><mark><%= @operation.company.name %></mark></strong></h1>
 
   <h3><mark> <%= @operation.company.legal_form %></mark> au capital de<mark><%= @operation.company.number_of_shares * @operation.company.share_nominal_value_cents / 100 %></mark> euros  </h3>
   <h3>Siège social : <mark><%= @operation.company.address %></mark></h3>
   <h3>SIREN : <mark><%= @operation.company.siren %></mark></h3>
   <br>
   <h3>(ci-après la « <strong>Société</strong> »)</h3>
+  <br>
 
   <h2>FEUILLE DE PRÉSENCE DE L'ASSEMBLÉE GÉNÉRALE EXTRAORDINAIRE DU <mark><%= @day %> <%= @month.upcase %> <%= @year %></mark></h2>
 
@@ -166,7 +160,7 @@ ____________________________
       <tr >
         <td ><mark><%= User.find(id).first_name %> <% User.find(id).last_name %></mark></td>
         <td><mark><%= number_of_shares %></mark></td>
-        <td ><mark><%= (((number_of_shares * 100).to_f /  @operation.company.number_of_shares).to_f).round(2) %></mark></td>
+        <td ><mark><%= (((number_of_shares * 100).to_f /  @operation.company.number_of_shares).to_f).round(1) %></mark></td>
         <td></td>
       </tr>
     <% end %>
