--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,6 +1,6 @@
 // Import Google fonts
 @import url("https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700");
-@import url("https://fonts.googleapis.com/css?family=Barlow:300");
+@import url("https://fonts.googleapis.com/css?family=Barlow:300,500");
 
 // Define fonts for body and headers
 
@@ -19,43 +19,51 @@
 /* --- Fonts --- */
 body {
   font-family: 'Barlow', sans-serif !important;
+  font-weight: 300 !important;
 }
 h1 {
   font-size: 36px;
   font-family: 'Barlow', sans-serif !important;
+  font-weight: 300 !important;
 }
 
 h2 {
   font-size: 24px;
   font-weight: normal;
   font-family: 'Barlow', sans-serif !important;
+  font-weight: 300 !important;
 }
 h3 {
   font-size: 20px;
   margin-bottom: 14px;
   font-family: 'Barlow', sans-serif !important;
+  font-weight: 300 !important;
 }
 h4 {
   font-size: 20px;
   font-weight: normal;
   font-family: 'Barlow', sans-serif !important;
+  font-weight: 300 !important;
 }
 h5 {
   font-size: 16px;
   font-weight: normal;
   margin: 0px;
   font-family: 'Barlow', sans-serif !important;
+  font-weight: 300 !important;
 }
 p {
   font-size: 16px;
   font-weight: normal;
   font-family: 'Barlow', sans-serif !important;
+  font-weight: 300 !important;
   /* Il faudrait une version à 300 */
 }
 a {
   color: #2C3C4C;
   text-decoration: none;
   font-family: 'Barlow', sans-serif !important;
+  font-weight: 300 !important;
 }
 
 a:hover {
