--- a/app/assets/stylesheets/layouts/_pdf.scss
+++ b/app/assets/stylesheets/layouts/_pdf.scss
@@ -1,8 +1,6 @@
 #pdf-body {
   text-align: justify;
-  font-family: 'Helvetica' !important;
-  color: black !important;
-  line-height: 14pt !important;
+  color: black;
   margin: 40pt;
   margin-top: 60pt;
   p{
@@ -11,24 +9,27 @@
   h1 {
     font-size: 24pt;
     margin-bottom: 6pt;
+    font-weight: 500;
   }
   h2 {
     font-size: 15pt;
+    line-height: 22pt;
+    font-weight:bolder;
   }
   h3 {
     font-size: 11pt ;
     margin-bottom: 0pt;
-    line-height: 2pt !important;
+    line-height: 2pt;
   }
   h4 {
     font-size: 12pt;
     font-weight: bold;
-    margin-bottom: 4pt;
+    margin-bottom: 14pt;
   }
   h5 {
     font-size: 10pt;
     font-style: italic;
-    font-weight:bolder;
+    font-weight:bold;
     margin-top: 0pt;
   }
   ul {
@@ -58,6 +59,6 @@
     font-size: 8pt;
     border: 1px solid lightgrey;
     text-align: center;
-    padding: 4pt;
+    padding: 10pt 4pt;
   }
 }
