--- a/app/views/operations/_chart-show-operation.html.erb
+++ b/app/views/operations/_chart-show-operation.html.erb
@@ -1,6 +1,8 @@
 <div class="graph">
   <p> Progression : <%= (@shares_values * 100 / @operation.target_amount.to_f.round(0)) %> %</p>
-  <canvas id="mySecondChart" data-share="<%= @operation.target_amount %> - <%= @shares_values %>" >
-  </canvas>
+  <div>
+    <canvas id="mySecondChart" data-share="<%= @operation.target_amount %> - <%= @shares_values %>" >
+    </canvas>
+  </div>
 </div>
 
