--- a/app/views/operations/_slide-show-operation.html.erb
+++ b/app/views/operations/_slide-show-operation.html.erb
@@ -12,7 +12,7 @@
   </p>
 
   <%= simple_form_for @d_document, url: create_documents_operation_path(@operation), method: "post" do |f| %>
-    <%= f.submit 'Lancer les signatures', class: 'btn btn-form-action' %>
+    <%= f.submit 'Lancer les signatures', class: 'btn btn-form-action small' %>
 
   <% end %>
 </div>
