--- a/app/views/operations/show.html.erb
+++ b/app/views/operations/show.html.erb
@@ -1,3 +1,5 @@
+
+
 <div id="slide-show-operation">
   <%= render 'slide-show-operation', company: @company, operation: @operation %>
 </div>
@@ -79,7 +81,7 @@
     <% else %>
       <div style="background-color: #F3BE69;" id="quatre" class="rectangle">
       </div>
-      <div id="quatre" class="rond">
+      <div style="background-color: #F3BE69; color: white; box-shadow: 1px 1px 5px grey; id="quatre" class="rond">
         <p>4</p>
       </div>
       <div style="background-color: #F3BE69; color: black;" id="quatre" class="rectangle">
@@ -105,6 +107,9 @@
           <div id="investor-list-partial">
             <%= render 'investors/show-investors', operation: @operation %>
           </div>
+          <div id="chart-operation-show">
+            <%= render 'chart-show-operation', operation: @operation %>
+          </div>
           <div class="investor-list-add">
             <button type="button" class="btn-transparent" id="btn-add-investor"> Ajouter un investisseur</button>
 
@@ -112,9 +117,6 @@
               <%= render 'form-add-investor', company: @company, operation: @operation %>
             </div>
           </div>
-        </div>
-        <div id="chart-operation-show">
-          <%= render 'chart-show-operation', operation: @operation %>
         </div>
       </div>
     </div>
@@ -126,57 +128,21 @@
       <div class="operation-card-body-text">
         INFO : Retrouvez ici l'ensemble des documents relatifs à l'opération en cours : Pitch, Business Plan, Etats financiers, documents juridiques... Ils seront accessibles pour vos investisseurs.
       </div>
-      <div class="operation-card-body">
-        <div class="container-fluid docs-container">
-          <div class="doccard">
-            <div> <%= cl_image_tag("superclosing/bs_template",
-            width: 100, height: 150, crop: :fill) %>
-            </div>
-            <p>Bon de souscription</p>
+      <div class="investors-corner">
+        <div class="investor-list">
+          <div id="investor-list-partial">
+            <%= render 'dataroom-list', operation: @operation %>
           </div>
-          <div class="doccard">
-            <div> <%= cl_image_tag("superclosing/opening_age_pv",
-            width: 100, height: 150, crop: :fill) %>
-            </div>
-            <p>PV d'ouverture d'AG</p>
-          </div>
-          <div class="doccard">
-            <div> <%= cl_image_tag("superclosing/opening_age_presence",
-            width: 100, height: 150, crop: :fill) %>
-            </div>
-            <p>Ouverture d'AG</p>
-          </div>
-          <div class="doccard">
-            <div> <%= cl_image_tag("superclosing/dps_suppression",
-            width: 100, height: 150, crop: :fill) %>
-            </div>
-            <p>Suppression de DPS</p>
-          </div>
-          <% @operation.s_documents.each do |s_document| %>
-          <div class="doccard">
-            <div> <%= cl_image_tag @s_document.d_url, height: 100, width: 70, crop: :fill  %>
-            </div>
-            <p><%= s_document.title  %></p>
-          </div>
-          <% end %>
-          <div class="doccard">
-            <p style="width: 100; height: 150; background-color: white;"> + </p>
-            <p>Uploader un document</p>
+
+          <div>
+            <%= link_to "" do %>
+              <button style="button" class="btn-transparent">Voir la DataRoom</button>
+            <% end %>
           </div>
         </div>
       </div>
-      <%= link_to "#" do %>
-        <button type="button" class="btn btn-superclosing gauche"> Ajouter un document</button>
-      <% end %>
-      <div class="gauche">
-        <%= simple_form_for [@operation.company, @operation, @s_document], method: :post do |f| %>
-          <%= f.input :title, label: "Nom" %>
-          <%= f.input :category, collection: ["Statuts", "Kbis", "Pitch", "Comptes", "Autre"], label: "Catégorie" %>
-          <%= f.input :d_url, as: :file, label: "Document" %>
-          <%= f.input :d_url_cache, as: :hidden %>
-          <%= f.button :submit, "Ajouter" %>
-        <% end %>
-      </div>
+
+
     </div>
 
     <div class='home-card'>
