les BS sont ok youpi

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -9,6 +9,7 @@
   padding: 12px;
   border-bottom: 2px solid #FDBB58;
   margin-bottom:22px;
+  position: relative;
   h4 {
     font-weight:bolder;
   }
