--- a/app/views/d_documents/_pv.html.erb
+++ b/app/views/d_documents/_pv.html.erb
@@ -4,9 +4,9 @@
 
   <h1><strong><mark><%= @operation.company.name %></mark></strong></h1>
 
-  <h3><mark> <%= @operation.company.legal_form %></mark> au capital de<mark><%= @operation.company.number_of_shares * @operation.company.share_nominal_value_cents / 100 %></mark> euros  </h3>
+  <h3><mark> <%= @operation.company.legal_form %></mark> au capital de<mark><%= humanized_money @operation.company.number_of_shares * @operation.company.share_nominal_value %></mark> euros  </h3>
   <h3>Siège social : <mark><%= @operation.company.address %></mark></h3>
-  <h3>SIREN : <mark><%= @operation.company.siren %></mark></h3>
+  <h3>SIREN : <mark><%= humanized_money @operation.company.siren %></mark></h3>
   <br>
   <h3>(ci-après la « <strong>Société</strong> »)</h3>
 
@@ -55,7 +55,7 @@ Personne ne demandant la parole, le Président met successivement aux voix les r
 L’Assemblée Générale, statuant aux conditions de quorum et de majorité requises par les statuts, conformément aux articles L. 225-129 et suivants du code de commerce et après avoir pris connaissance du rapport du Président,
 <br>
 <br>
-Décide d’augmenter le capital social de la Société d’un montant de <mark><%= @capital_augmentation %></mark> euros, par l’émission de <mark><%= @total_of_shares %></mark> actions ordinaires (les « <strong>Actions</strong>») d’une valeur nominale de <mark><%= @nominal %></mark> euros chacune, assorties d’une prime d’émission unitaire de <mark><%= @emit_prime %></mark> euros, pour un prix global, prime d’émission comprise, s’élevant à <mark><%= @global_price %></mark> euros par Action (l’« <strong>Augmentation de Capital</strong> ») ;
+Décide d’augmenter le capital social de la Société d’un montant de <mark><%= humanized_money @capital_augmentation %></mark> euros, par l’émission de <mark><%= humanized_money @total_of_shares %></mark> actions ordinaires (les « <strong>Actions</strong>») d’une valeur nominale de  <mark><%= humanized_money @nominal %></mark> euros chacune, assorties d’une prime d’émission unitaire de <mark><%= humanized_money @operation.investments.last.share_premium %></mark> euros, pour un prix global, prime d’émission comprise, s’élevant à   <mark><%=humanized_money @nominal + @operation.investments.last.share_premium %></mark> euros par Action (l’« <strong>Augmentation de Capital</strong> ») ;
 <br>
 <br>
 Cette résolution est adoptée à l’unanimité.
@@ -124,8 +124,8 @@ ____________________________
     <% @operation.investments.each do |investment| %>
       <tr >
         <td ><mark><%= investment.user.first_name %> <% investment.user.last_name %></mark></td>
-        <td><mark><%= investment.number_of_shares * @global_price %></mark> € </td>
-        <td ><mark><%= investment.number_of_shares  %></mark></td>
+        <td><mark><%= humanized_money investment.number_of_shares * (@nominal + investment.share_premium) %></mark> € </td>
+        <td ><mark><%= humanized_money investment.number_of_shares  %></mark></td>
         <td><mark><%= investment.user.address %></mark></td>
       </tr>
     <% end %>
@@ -137,9 +137,9 @@ ____________________________
 
   <h1><strong><mark><%= @operation.company.name %></mark></strong></h1>
 
-  <h3><mark> <%= @operation.company.legal_form %></mark> au capital de<mark><%= @operation.company.number_of_shares * @operation.company.share_nominal_value_cents / 100 %></mark> euros  </h3>
+  <h3><mark> <%= @operation.company.legal_form %></mark> au capital de<mark><%= humanized_money @operation.company.number_of_shares * @nominal %></mark> euros  </h3>
   <h3>Siège social : <mark><%= @operation.company.address %></mark></h3>
-  <h3>SIREN : <mark><%= @operation.company.siren %></mark></h3>
+  <h3>SIREN : <mark><%= humanized_money @operation.company.siren %></mark></h3>
   <br>
   <h3>(ci-après la « <strong>Société</strong> »)</h3>
   <br>
@@ -159,8 +159,8 @@ ____________________________
     <% @shareholders.each do |id, number_of_shares| %>
       <tr >
         <td ><mark><%= User.find(id).first_name %> <% User.find(id).last_name %></mark></td>
-        <td><mark><%= number_of_shares %></mark></td>
-        <td ><mark><%= (((number_of_shares * 100).to_f /  @operation.company.number_of_shares).to_f).round(1) %></mark></td>
+        <td><mark><%= humanized_money number_of_shares %></mark></td>
+        <td ><mark><%= humanized_money number_of_shares.to_f / (@operation.company.number_of_shares.to_f).round(1) %></mark></td>
         <td></td>
       </tr>
     <% end %>
@@ -168,7 +168,7 @@ ____________________________
 <br>
 <br>
 
-<p style='text-align: justify;'>La présente feuille de présence faisant apparaître que les associés, titulaires de  <mark><%= @shareholders.values.sum %></mark> actions composant le capital social de la Société et auxquelles sont attachées 100 % des voix sont présents ou représentés, a été arrêtée et certifiée exacte par le Président.</p>
+<p style='text-align: justify;'>La présente feuille de présence faisant apparaître que les associés, titulaires de  <mark><%= humanized_money @shareholders.values.sum %></mark> actions composant le capital social de la Société et auxquelles sont attachées 100 % des voix sont présents ou représentés, a été arrêtée et certifiée exacte par le Président.</p>
 
 </div>
 
