colors and margins

--- a/app/assets/stylesheets/components/_progress.scss
+++ b/app/assets/stylesheets/components/_progress.scss
@@ -5,6 +5,9 @@
   justify-content: center;
   align-items: center;
   background-color: #FBFBFB;
+  margin-top: 50px;
+  margin-bottom: 60px;
+  box-shadow: none;
 }
 
 .rectangle {
