plein de trucs : couleurs des charts, avatar navbar, btns...

--- a/app/assets/stylesheets/components/_charts.scss
+++ b/app/assets/stylesheets/components/_charts.scss
@@ -14,8 +14,14 @@
   height: 200px !important;
   width: 200px !important;
 }
-
-
+.graph-third {
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+#chart-third {
+  width: 500px !important;
+  height: 60px !important;
+}
 
 .indicateurs {
   display: flex;
