--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -40,6 +40,10 @@
 .operation-card-body {
   display: flex;
 }
+.operation-card-body-text{
+  text-align: justify;
+  padding: 0px 30px;
+}
 .captable-body {
   display: flex;
   justify-content: space-between;
@@ -63,4 +67,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.investor-list {
+  position: relative;
 }
