--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,12 @@
       <!-- Avatar with dropdown menu -->
       <div class="navbar-superclosing-item">
         <div class="dropdown">
-          <%= image_tag "avatar2.png", class: "avatar dropdown-toggle", id: "navbar-superclosing-menu", "data-toggle" => "dropdown" %>
+
+          <% if current_user.photo_url.file == nil %>
+              <%= image_tag "avatar2.png", class: "avatar dropdown-toggle", id: "navbar-superclosing-menu", "data-toggle" => "dropdown" %>
+          <% else %>
+              <%= cl_image_tag current_user.photo_url, class: "avatar dropdown-toggle", id: "navbar-superclosing-menu", "data-toggle" => "dropdown" %>
+          <% end %>
           <ul class="dropdown-menu dropdown-menu-right navbar-superclosing-dropdown-menu">
             <li>
               <%= link_to edit_user_registration_path do %>
