--- a/app/assets/stylesheets/components/_progress.scss
+++ b/app/assets/stylesheets/components/_progress.scss
@@ -26,7 +26,7 @@
 }
 
 .start-end {
-  background-color: #2F3C4B;
+  background-color: #2D3D4D;
   width: 15px;
   height: 15px;
   text-align: center;
