--- a/app/views/pages/_home-main.html.erb
+++ b/app/views/pages/_home-main.html.erb
@@ -19,7 +19,7 @@
     <div class='container-fluid home-steps'>
       <div class='card step-card'>
         <div class="step-card-header">
-          <div style="background-color: #F3BE69; color: black;" class="rond">
+          <div style="background-color: #F3BE69; color: white;" class="rond">
           <p>1</p>
         </div>
          Renseignez les infos de votre société
@@ -31,7 +31,7 @@
 
       <div class='card step-card'>
         <div class="step-card-header">
-        <div style="background-color: #F3BE69; color: black;" class="rond">
+        <div style="background-color: #F3BE69; color: white;" class="rond">
           <p>2</p>
         </div>
           Renseignez les infos de l'opération
@@ -43,7 +43,7 @@
 
       <div class='card step-card'>
         <div class="step-card-header">
-        <div style="background-color: #F3BE69; color: black;" class="rond">
+        <div style="background-color: #F3BE69; color: white;" class="rond">
           <p>3</p>
         </div>
 
@@ -56,7 +56,7 @@
 
       <div class='card step-card'>
         <div class="step-card-header">
-        <div style="background-color: #F3BE69; color: black;" class="rond">
+        <div style="background-color: #F3BE69; color: white;" class="rond">
           <p>4</p>
         </div>
 
