--- a/app/assets/stylesheets/components/_charts.scss
+++ b/app/assets/stylesheets/components/_charts.scss
@@ -4,6 +4,9 @@
   align-content: center;
   align-items: center;
 }
+.graph-captable {
+  margin: 20px 0px;
+}
 
 #myChart {
   height: 200px !important;
@@ -22,7 +25,6 @@
   width: 500px !important;
   height: 60px !important;
 }
-
 .indicateurs {
   display: flex;
   // border: solid 2px #fc9600;
