--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -40,8 +40,8 @@
 .home-steps {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-  padding: 0px;
+  justify-content: space-between;
+  padding: 0px 20px 0px 20px;
   margin-bottom: 40px;
 }
 .home-steps-header{
@@ -50,17 +50,20 @@
   margin-bottom: 30px;
 }
 .step-card {
-  width: 16vw;
+  flex: 1 1 0;
+  margin:10px;
   background: #fff;
   box-shadow: 1px 3px 4px 0px #2c3c4c2b;
   .step-card-header{
     text-align: center;
     font-weight: bolder;
     padding: 10px;
+    word-break:break-word;
   }
   .step-card-body{
     text-align: justify;
     font-size: 14px;
     padding: 16px;
+    word-break:break-word;
   }
 }
