--- a/app/views/companies/_show-operations.html.erb
+++ b/app/views/companies/_show-operations.html.erb
@@ -1,6 +1,6 @@
   <!--   <div class='row'> -->
       <!-- <div class = 'col col-xs-12'> -->
-        <div class='home-card'>
+        <div class='home-card' id='show-operations-card'>
           <div class = 'home-card-header'>
             <h4>Opérations</h4>
           </div>
