--- a/app/views/operations/show.html.erb
+++ b/app/views/operations/show.html.erb
@@ -133,10 +133,9 @@
           <div id="investor-list-partial">
             <%= render 'dataroom-list', operation: @operation %>
           </div>
-
           <div>
-            <%= link_to "" do %>
-              <button style="button" class="btn-transparent">Voir la DataRoom</button>
+            <%= link_to  operation_s_documents_path(@operation) do %>
+              <button style="button" class="btn-transparent-small">Aller à la DataRoom</button>
             <% end %>
           </div>
         </div>
