--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -53,7 +53,19 @@
   color: white;
   text-decoration: none;
 }
-
+input[type="submit"] {
+  background: #ffac30;
+  color: white;
+  font-size: 0.8em;
+  font-weight: 700;
+  text-decoration: none;
+  padding: 10px 20px;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  border-radius: 4px;
+  box-shadow: 0px 0px 3px rgba(50, 50, 50, 0.4);
+  opacity: 1;
+}
 .btn-form-action {
   background: #ffac30;
   color: white;
