ca slide de partout

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,3 +1,9 @@
+<div id="slide-show-company">
+  <%= render 'slide-show-company', company: @company, operation: @operation %>
+</div>
+
+
+
 <div class="main-width">
 
   <!-- =================================== Bar de progression ci-dessous -->
