--- a/app/views/pages/_home-main.html.erb
+++ b/app/views/pages/_home-main.html.erb
@@ -1,3 +1,8 @@
+<div id="slide-show-home">
+  <%= render 'slide-show-home' %>
+</div>
+
+
 <!-- ============================= DIV MAIN WIDTH : ne pas TOUCHER SVP -->
 <div class="main-width">
 
@@ -13,7 +18,7 @@
 
       <div id="home-loop-eclair">
         <img id="home-eclair" src="/assets/eclair.png" alt="eclair">
-        <h3>LES 4 ETAPES D'UN SUPERCLOSING REUSSI</h3>
+        <h3>LES 3 ETAPES D'UN SUPERCLOSING REUSSI</h3>
       </div>
     </div>
     <div class='container-fluid home-steps'>
@@ -22,10 +27,10 @@
           <div style="background-color: #F3BE69; color: white;" class="rond">
           <p>1</p>
         </div>
-         Renseignez les infos de votre société
+         Créez votre Société
         </div>
         <div class='step-card-body'>
-          Ci-dessous, répondez à quelques questions pour créer le profil de votre société.
+          Pour créer votre société, vous serez invité à renseigner ses informations et à remplir la CapTable.
         </div>
       </div>
 
@@ -34,10 +39,10 @@
         <div style="background-color: #F3BE69; color: white;" class="rond">
           <p>2</p>
         </div>
-          Renseignez les infos de l'opération
+          Renseignez l'Opération
         </div>
         <div class='step-card-body'>
-          Une fois votre profil société, définissez les caractéristiques de la levée de fonds que vous voulez réaliser : montant envisagé et valorisation de votre société.
+          Une fois votre profil société, définissez les caractéristiques de la levée de fonds que vous voulez réaliser : montant envisagé et valorisation de votre société. Invitez vos investisseurs et mettez à leur disposition une DataRoom.
         </div>
       </div>
 
@@ -46,21 +51,7 @@
         <div style="background-color: #F3BE69; color: white;" class="rond">
           <p>3</p>
         </div>
-
-          Invitez vos investisseurs
-        </div>
-        <div class='step-card-body'>
-          En renseignant simplement l'adresse mail de vos investisseurs et le montant de leur investissement, vous leur donnez accès à votre dataroom personnalisée et aux outils de génération automatique de documents et de signature électronique.
-        </div>
-      </div>
-
-      <div class='card step-card'>
-        <div class="step-card-header">
-        <div style="background-color: #F3BE69; color: white;" class="rond">
-          <p>4</p>
-        </div>
-
-          Finalisez la levée !
+          Faites le Closing
         </div>
         <div class='step-card-body'>
           Quand tous les investisseurs ont confirmé leur participation, vous pouvez procéder au closing : génération automatique des documents et signature électronique.
@@ -105,9 +96,6 @@
                     <p><%=  company.name %></p>
                   </div>
                 <% end %>
-                  <div class="company-card">
-                  <a href="" class="btn btn-add-company" data-toggle="modal" data-target="#modalCompanyCreation">AJOUTER UNE SOCIETE</a>
-                </div>
               </div>
 
             </div>
