--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,26 +8,28 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position:fixed;
 }
 
 /* User Avatar */
-.navbar-superclosing .avatar {
-  height: 40px;
-  width: 40px;
+.sidebar-superclosing .avatar {
   border-radius: 50%;
-  border: 1px solid #2D3D4D;
-  padding: 2px;
+  width: 60px;
+  border-radius: 50%;
+  position: relative;
+  left: 80px;
+  top: 50px;
 }
 
 /* Right section */
-.navbar-superclosing-right {
+.sidebar-superclosing-right {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
 /* Basic navbar item */
-.navbar-superclosing-item {
+.sidebar-superclosing-item {
   cursor: pointer;
   padding: 0 20px;
 }
@@ -42,33 +44,3 @@
   text-decoration: none;
 }
 
-/* Dropdown menu */
-.navbar-superclosing-dropdown-menu {
-  margin-top: 15px;
-  box-shadow: 1px 1px 4px #E6E6E6;
-  border-color: #E6E6E6;
-}
-.navbar-superclosing-dropdown-menu li > a {
-  transition: color 0.3s ease;
-  font-weight: lighter !important;
-  color: #999999 !important;
-  font-size: 15px !important;
-  line-height: 22px !important;
-  padding: 10px 20px;
-}
-.navbar-superclosing-dropdown-menu li > a:hover {
-  background: transparent !important;
-  color: black !important;
-}
-.navbar-superclosing-dropdown-menu:before {
-  content: ' ';
-  height: 10px;
-  width: 10px;
-  position: absolute;
-  right: 10px;
-  top: -6px;
-  background-color: white;
-  transform: rotate(45deg);
-  border-left: 1px solid #E6E6E6;
-  border-top: 1px solid #E6E6E6;
-}
