--- a/app/views/operations/show.html.erb
+++ b/app/views/operations/show.html.erb
@@ -12,97 +12,32 @@
 
   <div class="progress">
     <div class="start-end"></div>
-    <% if @operation.company.name == nil %>
-      <div id="un" class="rectangle">
-      </div>
-      <div id="un" class="rond">
-        <p style="font-weight: bold; font-size: 20px;">1</p>
-      </div>
-    <!--  Si société remplie à moitié -->
-    <% elsif @operation.company.share_nominal_value == 0 %>
-        <div style="background: repeating-linear-gradient(
-            -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px); box-shadow: 1px 1px 5px grey;" id="un" class="rectangle">
-        </div>
-        <div style="background: repeating-linear-gradient(
-            -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px); color: white; padding-top: 5px; box-shadow: 1px 1px 5px grey;" id="un" class="rond">
-          <p style="font-weight: bold; font-size: 20px;">1</p>
-        </div>
-    <!--  Si société remplie complètement -->
-    <% else %>
-      <div style=" box-shadow: 1px 1px 5px grey; background-color: #F3BE69;" id="un" class="rectangle">
-      </div>
-      <div style="background-color: #F3BE69; color: white; box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="un" class="rond">
-        <p style="font-weight: bold; font-size: 20px;">1</p>
-      </div>
-    <% end %>
 
 
-    <!--  Opération créee (normal, on est dans la show d'opération-->
-    <div style="background-color: #F3BE69; box-shadow: 1px 1px 5px grey;" id="deux" class="rectangle">
+      <div style="background-color: #Fc9600;  box-shadow: 1px 1px 5px grey; id="un" class="rectangle">
+      </div>
+      <div style="background-color: #Fc9600; color: white; box-shadow: 1px 1px 5px grey; padding-top: 5px; id="un" class="rond">
+        <p>1</p>
+      </div>
+
+
+    <div style="background-color: #Fc9600;  box-shadow: 1px 1px 5px grey; id="deux" class="rectangle">
     </div>
-    <div style="background-color: #F3BE69; color: white; box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="deux" class="rond">
+    <div style="background-color: #Fc9600; color: white; box-shadow: 1px 1px 5px grey; padding-top: 5px; id="deux" class="rond">
       <p style="font-weight: bold; font-size: 20px;">2</p>
     </div>
-
-    <!--  Si le montant envisagé est égal à la sommes des investissements -->
-
-    <% if (@operation.target_amount - @shares_values).negative?  %>
-      <div style="background-color: #F3BE69; box-shadow: 1px 1px 5px grey;" id="trois" class="rectangle">
-      </div>
-      <div style="background-color: #F3BE69; box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="trois" class="rond">
-        <p style="font-weight: bold; font-size: 20px; color:white;">3</p>
-      </div>
-
-        <!--  Si le montant envisagé n'est pas égal à la sommes des investissements -->
-
-    <% else %>
-      <div style="background: repeating-linear-gradient(
-            -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px); box-shadow: 1px 1px 5px grey;" id="trois" class="rectangle">
-      </div>
-      <div style="background: repeating-linear-gradient(
-            -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px); color: #2D3D4D; box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="trois" class="rond">
-        <p style="font-weight: bold; font-size: 20px;">3</p>
-      </div>
-    <% end %>
+    <div id="trois" class="rectangle">
+    </div>
+    <div id="trois" class="rond">
+      <p>3</p>
+    </div>
+    <div id="quatre" class="rectangle">
+    </div>
 
 
-    <!--  Si des ddocuments n'ont pas été générés -->
-    <% if @operation.d_documents.last == nil %>
-      <div id="quatre" class="rectangle">
-      </div>
-      <div id="quatre" class="rond">
-        <p>4</p>
-      </div>
-      <div id="quatre" class="rectangle">
-
-      </div>
-
-        <!--  Si des ddocuments ont été générés mais que le closing n'est pas encore intervenu -->
-    <% elsif @operation.status == 'Pending' %>
-      <div style="background: repeating-linear-gradient(
-            -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px); box-shadow: 1px 1px 5px grey;" id="quatre" class="rectangle">
-      </div>
-      <div style="background: repeating-linear-gradient(
-            -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px); color: #2D3D4D; box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="quatre" class="rond">
-        <p style="font-weight: bold; font-size: 20px;">4</p>
-      </div>
-      <div style="background: repeating-linear-gradient(
-            -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px); color: white; box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="quatre" class="rectangle">
-      </div>
-
-    <% else %>
-     <div style="background-color: #F3BE69;" id="quatre" class="rectangle">
-      </div>
-      <div style="background-color: #F3BE69; color: white; box-shadow: 1px 1px 5px grey; id="quatre" class="rond">
-        <p>4</p>
-      </div>
-      <div style="background-color: #F3BE69; color: black;" id="quatre" class="rectangle">
-      </div>
-    <% end %>
     <div class="start-end"></div>
 
   </div>
-
   <!-- ================================= -->
 
   <div class='page-header'>
