tout passe en revue

--- a/app/assets/stylesheets/components/_slide.scss
+++ b/app/assets/stylesheets/components/_slide.scss
@@ -3,7 +3,7 @@
   position: fixed;
   top: 60px;
   right: 20px;
-  width: 16vw;
+  width: 200px;
   background-color: #2c3c4c;
   padding: 10px;
   border-radius: 10px;
