--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -2,105 +2,101 @@
   <%= render 'slide-show-company', company: @company, operation: @operation %>
 </div>
 
-
-
-<div class="main-width">
-
   <!-- =================================== Bar de progression ci-dessous -->
 
-  <div class="progress">
-    <div class="start-end"></div>
-    <% if @company.name == nil  %>
-      <div id="un" class="rectangle">
+<div class="progress">
+  <div class="start-end"></div>
+  <% if @company.name == nil  %>
+    <div id="un" class="rectangle">
+    </div>
+    <div id="un" class="rond">
+      <p>1</p>
+    </div>
+  <!--  Si société remplie à moitié -->
+  <% elsif @company.share_nominal_value_cents == 0 %>
+      <div style="background: repeating-linear-gradient(
+          -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px);  box-shadow: 1px 1px 5px grey;" id="un" class="rectangle">
       </div>
-      <div id="un" class="rond">
-        <p>1</p>
-      </div>
-    <!--  Si société remplie à moitié -->
-    <% elsif @company.share_nominal_value_cents == 0 %>
-        <div style="background: repeating-linear-gradient(
-            -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px);  box-shadow: 1px 1px 5px grey;" id="un" class="rectangle">
-        </div>
-        <div style="background: repeating-linear-gradient(
-            -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px); color: white;box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="un" class="rond">
-          <p style="font-weight: bold; font-size: 20px;">1</p>
-        </div>
-    <!--  Si société remplie complètement -->
-    <% else %>
-      <div style="background-color: #F3BE69;  box-shadow: 1px 1px 5px grey;" id="un" class="rectangle">
-      </div>
-      <div style="background-color: #F3BE69; color: white; box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="un" class="rond">
+      <div style="background: repeating-linear-gradient(
+          -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px); color: white;box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="un" class="rond">
         <p style="font-weight: bold; font-size: 20px;">1</p>
       </div>
-    <% end %>
+  <!--  Si société remplie complètement -->
+  <% else %>
+    <div style="background-color: #F3BE69;  box-shadow: 1px 1px 5px grey;" id="un" class="rectangle">
+    </div>
+    <div style="background-color: #F3BE69; color: white; box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="un" class="rond">
+      <p style="font-weight: bold; font-size: 20px;">1</p>
+    </div>
+  <% end %>
 
-    <div id="deux" class="rectangle">
-    </div>
-    <div id="deux" class="rond">
-      <p>2</p>
-    </div>
-    <div id="trois" class="rectangle">
-    </div>
-    <div id="trois" class="rond">
-      <p>3</p>
-    </div>
-    <div id="quatre" class="rectangle">
-    </div>
-    <div id="quatre" class="rond">
-      <p>4</p>
-    </div>
-    <div id="quatre" class="rectangle">
-    </div>
-    <div class="start-end"></div>
+  <div id="deux" class="rectangle">
+  </div>
+  <div id="deux" class="rond">
+    <p>2</p>
+  </div>
+  <div id="trois" class="rectangle">
+  </div>
+  <div id="trois" class="rond">
+    <p>3</p>
+  </div>
+  <div id="quatre" class="rectangle">
+  </div>
+  <div id="quatre" class="rond">
+    <p>4</p>
+  </div>
+  <div id="quatre" class="rectangle">
+  </div>
+  <div class="start-end"></div>
 
+</div>
+
+
+<!-- =================================== Bar de progression ci-dessus -->
+
+<div id="Info-Rep-inline">
+  <div class='company-info-card'>
+    <div class = 'home-card-header' id='comp'>
+      <h4>Informations</h4>
+      <%= link_to edit_company_path(@company.id) do %>
+        <i class="far fa-edit" id='edit-company-info'></i>
+      <% end %>
+    </div>
+    <div class='company-info-card-body'>
+      <div class='company-show-logo'>
+        <strong><%= @company.name %></strong>
+        <% if @company.logo_url.file == nil %>
+          <img src="https://via.placeholder.com/120" class="logo">
+        <% else %>
+        <p> <%= cl_image_tag @company.logo_url, height: 120, width: 120, crop: :fit %></p>
+          <% end %>
+      </div>
+      <div class='company-show-infos'>
+        <div class='home-card' id='company-info-card'>
+          <p> <strong>SIREN</strong> <br> <%= @company.siren %> </p>
+          <p> <strong>Forme sociale</strong> <br> <%= @company.legal_form %> </p>
+          <p> <strong>Siège social</strong> <br>  <%= @company.address %></p>
+
+        </div>
+      </div>
+    </div>
   </div>
 
-
-  <!-- =================================== Bar de progression ci-dessus -->
-
-  <div id="Info-Rep-inline">
-    <div class='home-card' id="op-info">
-      <div class = 'home-card-header' id='comp'>
-        <h4>Informations</h4>
-        <%= link_to edit_company_path(@company.id) do %>
-          <i class="far fa-edit" id='edit-company-info'></i>
-        <% end %>
-      </div>
-      <div class='home-card-body' id='company-card'>
-        <div class='company-show-logo'>
-          <h3><strong><%= @company.name %></strong> </h3>
-          <% if @company.logo_url.file == nil %>
-            <img src="https://via.placeholder.com/120" class="logo">
-          <% else %>
-          <p> <%= cl_image_tag @company.logo_url, height: 100, width: 100, crop: :fit %></p>
-            <% end %>
-        </div>
-        <div class='company-show-infos'>
-          <div class='home-card' id='company-info-card'>
-            <p> <strong>SIREN</strong> : <%= @company.siren %> </p>
-            <p> <strong>Forme sociale</strong> : <%= @company.legal_form %> </p>
-            <p> <strong>Siège social</strong> :  <%= @company.address %></p>
-
-          </div>
-        </div>
-      </div>
+  <div class='company-captable-card'>
+    <div class = 'home-card-header'>
+      <h4>Répartition du capital</h4>
+      <%= link_to new_company_captable_path(@company.id) do %>
+        <i class="far fa-edit" id='edit-company-info'></i>
+      <% end %>
     </div>
 
-    <div class='home-card'>
-      <div class = 'home-card-header'>
-        <h4>Répartition du capital</h4>
-        <%= link_to new_company_captable_path(@company.id) do %>
-          <i class="far fa-edit" id='edit-company-info'></i>
-        <% end %>
-      </div>
-
-      <%= render 'show-captable' %>
-    </div>
+    <%= render 'show-captable' %>
   </div>
+</div>
 
 <%= render 'show-operations' %>
 
-</div>
+
 
 
 
