--- a/app/views/companies/_slide-show-company.html.erb
+++ b/app/views/companies/_slide-show-company.html.erb
@@ -1,9 +1,9 @@
 <div id="slide">
-  <h4>Créez l'opération !</h4>
+  <h4>Lancez une nouvelle opération !</h4>
 
   <div class="text-align-center">
     <%= link_to new_company_operation_path(@company) do %>
-      <button style="button" class="btn btn-form-action">Levé de Fonds <i class="fas fa-play"></i></button>
+      <button style="button" class="btn btn-form-action">Levée de fonds    <i class="fas fa-rocket"></i></button>
     <% end %>
   </div>
 
