--- a/app/views/pages/_slide-show-home.html.erb
+++ b/app/views/pages/_slide-show-home.html.erb
@@ -1,4 +1,5 @@
 <div id="slide">
-  <h4>Créez votre Société</h4>
-<a href="" class="btn btn-form-action" data-toggle="modal" data-target="#modalCompanyCreation">C'est parti <i class="fas fa-rocket"></i></a>
+  <h4>Enregistrez votre société</h4>
+  <a href="" style="color: white; font-size: 0.8em;
+    font-weight: 500 !important;" class="btn btn-form-action" data-toggle="modal" data-target="#modalCompanyCreation">C'est parti <i class="fas fa-play"></i></a>
 </div>
