--- a/app/views/d_documents/index.html.erb
+++ b/app/views/d_documents/index.html.erb
@@ -1,3 +1,44 @@
+
+<!-- =================================Bar de progression ci-dessous -->
+
+  <div class="progress">
+    <div class="start-end"></div>
+
+
+      <div style="background-color: #F3BE69; color: white; box-shadow: 1px 1px 5px grey; id="un" class="rectangle">
+      </div>
+      <div style="background-color: #F3BE69; color: white; box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="un" class="rond">
+        <p style="font-weight: bold; font-size: 20px; color: #2D3D4D;">1</p>
+      </div>
+
+      <div style="background-color: #F3BE69; color: white; box-shadow: 1px 1px 5px grey; id="deux" class="rectangle">
+      </div>
+      <div style="background-color: #F3BE69; color: white; box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="deux" class="rond">
+        <p style="font-weight: bold; font-size: 20px; color: #2D3D4D;">2</p>
+      </div>
+
+      <div style="background: repeating-linear-gradient(
+          -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px); color: white;box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="trois" class="rectangle">
+      </div>
+      <div style="background: repeating-linear-gradient(
+          -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px); color: white;box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="trois" class="rond">
+        <p style="font-weight: bold; font-size: 20px; color: #2D3D4D">3</p>
+      </div>
+
+
+
+    <div style="background: repeating-linear-gradient(
+          -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px); color: white;box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="quatre" class="rectangle">
+      </div>
+
+
+    <div class="start-end"></div>
+
+  </div>
+  <!-- ================================= -->
+
+
+
 <h1>Liste des documents dynamiques générés</h1>
 
 <ul>
