--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -8,21 +8,20 @@
   <div class="progress">
     <div class="start-end"></div>
 
-      <div style="background-color: #F3BE69;  box-shadow: 1px 1px 5px grey;" id="un" class="rectangle">
+      <div style="background: repeating-linear-gradient(
+          -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px); color: white;box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="un" class="rectangle">
 
       </div>
       <div style="background: repeating-linear-gradient(
           -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px); color: white;box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="un" class="rond">
-        <p style="font-weight: bold; font-size: 20px;">1</p>
+        <p style="font-weight: bold; font-size: 20px; color: #2D3D4D">1</p>
       </div>
-
-
 
     <div id="deux" class="rectangle">
 
     </div>
-    <div style="background-color: #F3BE69; color: white; box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="un" class="rond">
-      <p style="font-weight: bold; font-size: 20px;">2</p>
+    <div id="deux" class="rond">
+      <p >2</p>
     </div>
 
     <div id="trois" class="rectangle">
@@ -33,11 +32,7 @@
     <div id="quatre" class="rectangle">
     </div>
 
-
     <div class="start-end"></div>
-
-
-
 
 </div>
 
