--- a/app/views/operations/show.html.erb
+++ b/app/views/operations/show.html.erb
@@ -14,18 +14,28 @@
     <div class="start-end"></div>
 
 
-      <div style="background-color: #Fc9600;  box-shadow: 1px 1px 5px grey; id="un" class="rectangle">
+      <div style="background-color: #F3BE69; color: white; box-shadow: 1px 1px 5px grey; id="un" class="rectangle">
       </div>
-      <div style="background-color: #Fc9600; color: white; box-shadow: 1px 1px 5px grey; padding-top: 5px; id="un" class="rond">
-        <p>1</p>
+      <div style="background-color: #F3BE69; color: white; box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="un" class="rond">
+        <p style="font-weight: bold; font-size: 20px; color: #2D3D4D;">1</p>
       </div>
 
+      <% if (@operation.target_amount - @shares_values).positive? %>
+        <div style="background: repeating-linear-gradient(
+            -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px); color: white;box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="deux" class="rectangle">
+        </div>
+        <div style="background: repeating-linear-gradient(
+            -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px); color: white;box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="deux" class="rond">
+          <p style="font-weight: bold; font-size: 20px; color: #2D3D4D">2</p>
+        </div>
+      <% else %>
+        <div style="background-color: #F3BE69; color: white; box-shadow: 1px 1px 5px grey; id="deux" class="rectangle">
+        </div>
+        <div style="background-color: #F3BE69; color: white; box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="deux" class="rond">
+          <p style="font-weight: bold; font-size: 20px; color: #2D3D4D;">2</p>
+        </div>
+      <% end %>
 
-    <div style="background-color: #Fc9600;  box-shadow: 1px 1px 5px grey; id="deux" class="rectangle">
-    </div>
-    <div style="background-color: #Fc9600; color: white; box-shadow: 1px 1px 5px grey; padding-top: 5px; id="deux" class="rond">
-      <p style="font-weight: bold; font-size: 20px;">2</p>
-    </div>
     <div id="trois" class="rectangle">
     </div>
     <div id="trois" class="rond">
