--- a/app/views/pages/_home-main.html.erb
+++ b/app/views/pages/_home-main.html.erb
@@ -23,10 +23,10 @@
         <div style="background-color: #F3BE69; color: white;" class="rond">
         <p>1</p>
       </div>
-       Créez votre Société
+       Créez votre profil société
       </div>
       <div class='step-card-body'>
-        Pour créer votre société, vous serez invité à renseigner ses informations et à remplir la CapTable.
+        Complétez le profil de votre société et renseignez les informations relatives à son capital.
       </div>
     </div>
 
@@ -35,10 +35,10 @@
       <div style="background-color: #F3BE69; color: white;" class="rond">
         <p>2</p>
       </div>
-        Renseignez l'Opération
+        Renseignez votre opération
       </div>
       <div class='step-card-body'>
-        Une fois votre profil société, définissez les caractéristiques de la levée de fonds que vous voulez réaliser : montant envisagé et valorisation de votre société. Invitez vos investisseurs et mettez à leur disposition une DataRoom.
+        Définissez les caractéristiques de la levée de fonds que vous voulez réaliser : montant envisagé et valorisation de votre société. <br>Invitez vos investisseurs et mettez à leur disposition une DataRoom.
       </div>
     </div>
 
@@ -50,7 +50,7 @@
         Faites le Closing
       </div>
       <div class='step-card-body'>
-        Quand tous les investisseurs ont confirmé leur participation, vous pouvez procéder au closing : génération automatique des documents et signature électronique.
+        Dès que tous vos investisseurs ont confirmé leur participation, procédez au closing : génération automatique des documents et signature électronique.
       </div>
     </div>
   </div>
