test pour que le petit eclair tourne

--- a/app/views/pages/_home-main.html.erb
+++ b/app/views/pages/_home-main.html.erb
@@ -13,7 +13,7 @@
   <div class='home-steps-header'>
 
     <div id="home-loop-eclair">
-      <img id="home-eclair" src="/assets/eclair.png" alt="eclair">
+      <%= image_tag "eclair.png",  id: "home-eclair", alt: "eclair" %>
       <h3>LES 3 ETAPES D'UN SUPERCLOSING REUSSI</h3>
     </div>
   </div>
