missing end in sidebar

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -33,6 +33,7 @@
       <div class="sidebar-item">
         <%= link_to root_path, class: "sidebar-link" do %>
           <i class="fas fa-columns"><span id="sidebar-item-1"><span class="sidebar-letter-color">S</span>ociétés</span></i>
+          <% end %>
       </div>
     <% else %>
       <div class="sidebar-item">
