--- a/app/views/pages/_slide-show-home.html.erb
+++ b/app/views/pages/_slide-show-home.html.erb
@@ -1,5 +1,5 @@
 <div id="slide">
-  <h4>Enregistrez votre société</h4>
+  <h4>Créez votre profil société</h4>
   <a href="" style="color: white; font-size: 0.8em;
-    font-weight: 500 !important;" class="btn btn-form-action" data-toggle="modal" data-target="#modalCompanyCreation">C'est parti <i class="fas fa-play"></i></a>
+    font-weight: 500 !important;" class="btn btn-slide" data-toggle="modal" data-target="#modalCompanyCreation">Créer <i class="fas fa-play"></i></a>
 </div>
