--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -31,7 +31,7 @@
 }
 
 .btn-landing-signup:hover {
-  background: #ffa118;
+  background: #ffac30;
   color: white;
   text-decoration: none;
 }
@@ -81,7 +81,7 @@ input[type="submit"] {
 }
 
 .btn-form-action:hover {
-  background: #ffa118;
+  background: #ffac30;
   color: white;
   text-decoration: none;
 }
@@ -101,12 +101,12 @@ input[type="submit"] {
 }
 
 .btn-transparent:hover {
-  background: #ffa118;
+  background: #ffac30;
   color: white;
   text-decoration: none;
 }
 .btn-transparent:active {
-  background: #ffa118;
+  background: #ffac30;
   color: white;
   text-decoration: none;
 }
@@ -126,7 +126,7 @@ input[type="submit"] {
 }
 
 .btn-transparent-small:hover {
-  background: #ffa118;
+  background: #ffac30;
   color: white;
   text-decoration: none;
 }
@@ -146,7 +146,7 @@ input[type="submit"] {
 }
 
 .btn-transparent-xtra-small:hover {
-  background: #ffa118;
+  background: #ffac30;
   color: white;
   text-decoration: none;
 }
@@ -201,4 +201,27 @@ input[type="submit"] {
   text-decoration: none;
   color: $red;
   background-color: #fdecec;
+}
+.btn-slide {
+  width: 160px;
+  color: white;
+  background: #ffac30;
+  border-radius: 6px !important;
+  font-size: 0.8em !important;
+  font-weight:500 !important;
+  padding: 6px 12px !important;
+  margin-top: 12px !important;
+  margin-bottom :0px !important;
+  border: 2px solid #ffac30;
+  .fas:before {
+    font-family: "Font Awesome 5 Free";
+    margin-left: 7px;
+    font-size: 0.8em !important;
+  }
+}
+.btn-slide:hover {
+  text-decoration: none;
+  color: #ffac30 !important;
+  border: 2px solid #ffac30 ;
+  background: white;
 }
