--- a/app/views/pages/_home-main.html.erb
+++ b/app/views/pages/_home-main.html.erb
@@ -47,10 +47,10 @@
       <div style="background-color: #F3BE69; color: white;" class="rond">
         <p>3</p>
       </div>
-        Faites le Closing
+        Procédez au Closing
       </div>
       <div class='step-card-body'>
-        Dès que tous vos investisseurs ont confirmé leur participation, procédez au closing : génération automatique des documents et signature électronique.
+        Dès que tous vos investisseurs ont confirmé leur participation, passez au closing : génération automatique des documents et signature électronique.
       </div>
     </div>
   </div>
