avatar and contact

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -78,5 +78,12 @@
     </div> -->
   </div>
 
+  <div class='sidebar-bottom'>
+    <div class='sidebar-bottom-email'>
+      Une question ? Une suggestion ? Une remarque ?
+       <a href="mailto:support@superclosing.com" target="_blank">Contactez-nous</a>
+    </div>
+  </div>
+
 </div>
 
