--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -18,6 +18,27 @@
   flex-direction: column;
   align-items: center;
 }
+.sidebar-bottom{
+  margin-top: 28vh;
+  left: 0px;
+  bottom: 28px;
+  color: #e2e2e4;
+  font-weight: 300;
+  font-family: 'Barlow';
+  font-size: 0.8em;
+  text-align: center;
+  padding-left: 15px;
+  padding-right: 15px;
+  a {
+    color: #FDBB58;
+    text-decoration: none;
+    font-family: 'Barlow';
+    font-size: 1em !important;
+  }
+  a:hover {
+    text-decoration: none;
+  }
+}
 .dropdown-menu{
   min-width: 150px !important;
 }
@@ -25,6 +46,8 @@
 #sidebar-superclosing-menu {
   border-radius: 50%;
   width: 54px;
+  height: 54px;
+  object-fit: cover;
   position: relative;
   left: 82px;
   top: 50px;
