--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -69,13 +69,14 @@ input[type="submit"] {
 .btn-form-action {
   background: #ffac30;
   color: white;
-  font-size: 0.8em;
-  font-weight: 500;
+  font-size: 0.8em !important;
+  font-weight: 500 !important;
   text-decoration: none;
-  padding: 8px 20px;
+  border-radius: 6px !important;
+  border: 2px solid #ffac30;
+  padding: 6px 12px !important;
   margin-top: 10px;
   margin-bottom: 15px;
-  border-radius: 4px;
   box-shadow: 0px 0px 3px rgba(50, 50, 50, 0.4);
   opacity: 1;
 }
